# nav_goal_manager

./: CMakeLists.txt  README.md  package.xml
include/nav_goal_manager/: nav_goal_manager.h
src/: nav_goal_manager.cpp  nav_goal_manager_node.cpp
